<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#000">

    <androidx.cardview.widget.CardView
        android:layout_margin="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="#fff" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/success_form_tile"
                android:textAlignment="center"
                android:textSize="36sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/success_form_login"
                android:textSize="25sp" />

            <Button
                android:id="@+id/activity_main_backButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/success_form_backButton"
                android:textSize="25sp"
                android:onClick="activity_main"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>